
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int mach_port_t ;


 int fflush (int ) ;
 int fprintf (int ,char*,...) ;
 int leak_one_ref (int ) ;
 int* spinners ;
 int stdout ;
 int strlen (int*) ;

void leak_n_refs(mach_port_t overflower, uint64_t n_refs) {
 int step = 0;
  for (uint64_t i = 0; i < n_refs; i++) {
    leak_one_ref(overflower);
    if ((i % 0x40000) == 0) {
      float done = (float)i/(float)n_refs;
    step = (step+1) % strlen(spinners);
      fprintf(stdout, "\roverflowing [%c] (%3.3f%%)", spinners[step], done * 100);
      fflush(stdout);
    }
  }
 fprintf(stdout, "\roverflowed                           \n");
 fflush(stdout);
}
